Select first item in quick-open if only one item in list

BUG: 422751