kate/katequickopen.cpp
@@ -122,7 +122,7 @@ bool KateQuickOpen::eventFilter(QObject *obj, QEvent *event)
 void KateQuickOpen::reselectFirst()
 {
     int first = 0;
-    if (m_mainWindow->viewManager()->sortedViews().size() > 1)
+    if (m_mainWindow->viewManager()->sortedViews().size() > 1 && m_model->rowCount() > 1)
         first = 1;
 
     QModelIndex index = m_model->index(first, 0);
